--- a/qyxycjh/policy/locales/zh_CN/LC_MESSAGES/qyxycjh.policy.po
+++ b/qyxycjh/policy/locales/zh_CN/LC_MESSAGES/qyxycjh.policy.po
@@ -1,156 +1,297 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: qyxycjh.policy\n"
-"POT-Creation-Date: 2020-02-26 13:06+0000\n"
-"PO-Revision-Date: 2015-02-16 20:49+0800\n"
-"Last-Translator: adam <yuejun.tang@gmail.com>\n"
+"POT-Creation-Date: 2020-03-01 01:28+0000\n"
+"PO-Revision-Date: 2020-03-01 09:42+0800\n"
+"Last-Translator: Adam <yuejun.tang@gmail.com>\n"
 "Language-Team: 315ok.org <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Language-Code: zh-cn\n"
 "Language-Name: Chinese\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: qyxycjh.policy\n"
+"Language: zh_CN\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
-#: ./profiles/default/types/qyxycjh.policy.annualsurveyfolder.xml
-msgid "Annual survey Folder"
-msgstr ""
+#: browser/templates/orgnization_view.pt:21
+msgid "Add annual survey"
+msgstr "添加信用报告"
 
-#: ./content/orgnization.py:50
+#: content/governmentdepartment.py:28 content/orgnization.py:29
+msgid "Address"
+msgstr "注册地址"
+
+#: content/annualsurvey.py:43
 msgid "Attach your anual report (word, etc)."
-msgstr ""
+msgstr "上载word版企业信用申报表"
 
-#: ./browser/orgnization_survey.py:278
+#: browser/member_view.py:417
+msgid "Base information"
+msgstr "基本信息"
+
+#: browser/orgnization_survey.py:288
 msgid "Create"
-msgstr ""
+msgstr "创建"
 
-#: ./browser/templates/orgnization_annual_survey.pt:26
-#: ./browser/templates/survey_draft_view.pt:31
+#: browser/datainout.py:128
+msgid "Data successfully imported."
+msgstr "数据已成功导入"
+
+#: browser/templates/orgnization_annual_survey.pt:26
+#: browser/templates/orgnization_view.pt:30
+#: browser/templates/survey_draft_view.pt:34
 msgid "Edit"
-msgstr ""
+msgstr "编辑"
 
-#: ./configure.zcml:26
+#: browser/orgnization.py:25
+msgid "Edit Organization"
+msgstr "编辑企业信息"
+
+#: browser/orgnization.py:13
+msgid "Edit Organization Survey"
+msgstr "编辑信用报告"
+
+#: profiles/default/types/qyxycjh.policy.governmentorgnization.xml
+msgid "Government Orgnization"
+msgstr "主管组织"
+
+#: configure.zcml:42
 msgid "Installs the qyxycjh.policy package"
 msgstr ""
 
-#: ./browser/ajax_view.py:104
+#: profiles/default/types/qyxycjh.policy.organizationmember.xml
+msgid "Member"
+msgstr "成员"
+
+#: browser/member_view.py:448
+msgid "Network information"
+msgstr "网络信息"
+
+#: browser/ajax_view.py:109
 msgid "Not able to send notifications"
-msgstr ""
+msgstr "不能发送通知"
 
-#: ./profiles/default/types/qyxycjh.policy.orgnizationsurvey.xml
+#: profiles/default/types/qyxycjh.policy.orgnizationsurvey.xml
 msgid "Organization annual credit survey"
-msgstr ""
+msgstr "企业年度信用报告"
 
-#: ./profiles/default/types/qyxycjh.policy.orgnizationsurvey.xml
+#: profiles/default/types/qyxycjh.policy.orgnizationsurvey.xml
 msgid "Organization annual credit survey reporter"
-msgstr ""
+msgstr "企业年度信用报告"
 
-#: ./browser/templates/orgnization_annual_survey.pt:36
-#: ./browser/templates/survey_draft_view.pt:41
+#: profiles/default/types/qyxycjh.policy.orgnization.xml
+msgid "Orgnization"
+msgstr "企业"
+
+#: profiles/default/types/qyxycjh.policy.orgnizationfolder.xml
+msgid "Orgnization Folder"
+msgstr "企业库"
+
+#: content/orgnization.py:54
+msgid "Pass Date"
+msgstr "批准日期"
+
+#: browser/register.py:124
+msgid "Please correct errors"
+msgstr "请更正所指错误。"
+
+#: browser/register.py:200
+msgid "Register a sponsor account"
+msgstr "注册一个监管账户"
+
+#: browser/datainout.py:125
+msgid "Some errors occured. Please check your CSV syntax and retry."
+msgstr "出错！请检查你的CSV文件格式。"
+
+#: browser/templates/orgnization_annual_survey.pt:36
+#: browser/templates/survey_draft_view.pt:44
 msgid "Submit"
-msgstr ""
+msgstr "提交"
 
-#: ./configure.zcml:34
+#: configure.zcml:50
 msgid "Uninstall: qyxycjh.policy"
 msgstr ""
 
-#: ./configure.zcml:34
+#: configure.zcml:50
 msgid "Uninstalls the qyxycjh.policy package"
 msgstr ""
 
-#: ./profiles/default/types/qyxycjh.policy.annualsurveyfolder.xml
-msgid "a folder contain some organizations's annual credit survey information"
-msgstr ""
+#: browser/member_view.py:432
+msgid "Update password"
+msgstr "更新密码"
 
-#: ./vocabulary.py:13
+#: browser/datainout.py:80
+msgid "Wrong specification of the CSV file. Please correct it and retry."
+msgstr "错误的CSV文件，请更正后重试。"
+
+#: utility.py:8
+msgid "Your image is too large"
+msgstr "图片尺寸太大"
+
+#: profiles/default/types/qyxycjh.policy.orgnizationfolder.xml
+msgid "a folder contain some orgnizations"
+msgstr "一个包含企业信息的文件夹"
+
+#: content/governmentdepartment.py:38 content/orgnization.py:45
+msgid "a image of the public sign"
+msgstr "公章扫描图片"
+
+#: vocabulary.py:44
 msgid "buhege"
-msgstr ""
+msgstr "不合格"
 
-#: ./content/orgnization.py:41
-msgid "civil agent audit date"
-msgstr ""
+#: browser/register.py:146
+msgid "cancel"
+msgstr "取消"
 
-#: ./content/orgnization.py:36
-msgid "civil agent comments"
-msgstr ""
+#: content/member.py:13
+msgid "company name"
+msgstr "公司名称"
 
-#: ./vocabulary.py:11
+#: browser/orgnization_listing.py:528
+msgid "edit annual survey comments and result"
+msgstr "更新年检评价及年检结果"
+
+#: profiles/default/types/qyxycjh.policy.governmentorgnization.xml
+msgid "government orgnization content type"
+msgstr "监管部门类型"
+
+#: vocabulary.py:42
 msgid "hege"
-msgstr ""
+msgstr "合格"
 
 #. Default: "How many levels to list after the top level."
-#: ./browser/interfaces.py:21
+#: browser/interfaces.py:26
 msgid "help_dropdown_depth"
 msgstr ""
 
 #. Default: "WARNING! This is an experimental feature. This is using RAM to store cached template for dropdown menus. Technically every user and every visited section gets its own instance in the ram.cache. Don't enable this if you don't know what this is about. Disable this option if you get unexpected behavior of your global tabs."
-#: ./browser/interfaces.py:28
+#: browser/interfaces.py:33
 msgid "help_enable_caching"
 msgstr ""
 
 #. Default: "With this option enabled, every menu item is clickable. With this option disabled, an item is only clickable when it is not a parent so it has no children."
-#: ./browser/interfaces.py:43
+#: browser/interfaces.py:48
 msgid "help_enable_parent_clickable"
 msgstr ""
 
-#: ./vocabulary.py:12
+#. Default: "A code identifying this organization."
+#: content/orgnization.py:40
+msgid "help_register_code"
+msgstr "企业信用代码"
+
+#: vocabulary.py:43
 msgid "jibenhege"
-msgstr ""
+msgstr "基本合格"
 
 #. Default: "Anonymous User"
-#: ./browser/orgnization_survey.py:273
+#: browser/orgnization_survey.py:284
 msgid "label_anonymous_user"
 msgstr ""
 
 #. Default: "Depth of dropdown menus"
-#: ./browser/interfaces.py:20
+#: browser/interfaces.py:25
 msgid "label_dropdown_depth"
 msgstr ""
 
 #. Default: "Enable caching"
-#: ./browser/interfaces.py:27
+#: browser/interfaces.py:32
 msgid "label_enable_caching"
 msgstr ""
 
 #. Default: "Enable clicking menu items that have children"
-#: ./browser/interfaces.py:41
+#: browser/interfaces.py:46
 msgid "label_enable_parent_clickable"
 msgstr ""
 
-#: ./content/orgnization.py:54
+#. Default: "register code"
+#: content/orgnization.py:38
+msgid "label_register_code"
+msgstr "企业信用代码"
+
+#: content/annualsurvey.py:48
 msgid "last status of the annual survey"
-msgstr ""
+msgstr "年报审批流中，上一次工作流状态"
 
-#: ./content/orgnization.py:28
+#: content/orgnization.py:33
+msgid "legal person"
+msgstr "法定代表人"
+
+#: profiles/default/types/qyxycjh.policy.memberfolder.xml
+msgid "memberfolder"
+msgstr "成员文件夹"
+
+#: profiles/default/types/qyxycjh.policy.memberfolder.xml
+msgid "memberfolder for site member"
+msgstr "成员文件夹"
+
+#: content/governmentdepartment.py:32
+msgid "operator"
+msgstr "经办人"
+
+#: content/annualsurvey.py:19 content/member.py:26
 msgid "organization name"
-msgstr ""
+msgstr "企业名称"
 
-#: ./configure.zcml:26
+#: content/governmentdepartment.py:24
+msgid "organization summary"
+msgstr "企业简介"
+
+#: profiles/default/types/qyxycjh.policy.orgnization.xml
+msgid "orgnization content type"
+msgstr "企业内容类型"
+
+#: content/governmentdepartment.py:20 content/orgnization.py:21
+msgid "orgnization name"
+msgstr "企业名称"
+
+#: content/governmentdepartment.py:37 content/orgnization.py:44
+msgid "public sign"
+msgstr "公章"
+
+#: configure.zcml:42
 msgid "qyxycjh.policy"
 msgstr ""
 
-#: ./content/orgnization.py:49
+#: content/annualsurvey.py:42
 msgid "report"
-msgstr ""
+msgstr "年报"
 
-#: ./content/orgnization.py:32
+#: content/orgnization.py:25
+msgid "sector"
+msgstr "行业"
+
+#: content/annualsurvey.py:25
 msgid "sponsor"
-msgstr ""
+msgstr "业务主管单位"
 
-#: ./content/orgnization.py:39
+#: content/annualsurvey.py:32
 msgid "sponsor audit date"
-msgstr ""
+msgstr "主管单位审核日期"
 
-#: ./content/orgnization.py:34
+#: content/annualsurvey.py:27
 msgid "sponsor comments"
-msgstr ""
+msgstr "主管单位审核意见"
 
-#: ./content/orgnization.py:59
+#: profiles/default/types/qyxycjh.policy.sponsormember.xml
+msgid "sponsor member"
+msgstr "监管账号会员"
+
+#: browser/register.py:119
+msgid "submit"
+msgstr "提交"
+
+#: content/orgnization.py:49
+msgid "supervisor organization"
+msgstr "监管组织"
+
+#: content/annualsurvey.py:53
 msgid "the result of annual survey"
-msgstr ""
+msgstr "年检结果"
 
-#: ./content/orgnization.py:44
+#: content/annualsurvey.py:37
 msgid "the year for survey"
-msgstr ""
+msgstr "年度"
